--- a/src/less/theme.less
+++ b/src/less/theme.less
@@ -8,6 +8,17 @@
 /* 按钮--鼠标按下时背景色 */
 @btn-mousedown-color: #0033cc;
 
+/* confirm按钮无鼠标触碰时背景色 */
+@confirm-btn-released-color: #3573e0;
+/* confirm 取消 按钮无鼠标触碰时背景色 */
+@confirm-cancel-released-color: #dcedfe;
+/* confirm 取消 按钮文字颜色 */
+@confirm-cancel-color: #3573e0;
+/* confirm按钮--鼠标滑过时背景色 */
+@confirm-btn-mouseover-color: #99ccff;
+/* confirm按钮--鼠标按下时背景色 */
+@confirm-btn-mousedown-color: #6699ff;
+
 
 /* 顶部高度 */
 @header-height: 112px;
@@ -41,3 +52,11 @@
 /* table */
 @table-title-color: #ccffff;
 
+
+/* confirm弹框 */
+@confirm-title-bgcolor: #3573e0;
+@confirm-title-color: #fff;
+/* confirm close按钮hover背景颜色 */
+@confirm-close-hover: #ff3334;
+/* confirm close按钮active背景颜色 */
+@confirm-close-active: #cc0001;
