--- a/src/less/button.less
+++ b/src/less/button.less
@@ -18,6 +18,48 @@
   border: none;
   user-select: none;
   cursor: pointer;
+  /* confirm按钮无鼠标触碰时背景色 */
+  @confirm-btn-released-color: #3573e0;
+  /* confirm 取消 按钮无鼠标触碰时背景色 */
+  @confirm-cancel-released-color: #dcedfe;
+  /* confirm 取消 按钮文字颜色 */
+  @confirm-cancel-color: #3573e0;
+  /* confirm按钮--鼠标滑过时背景色 */
+  @confirm-btn-mouseover-color: #99ccff;
+  /* confirm按钮--鼠标按下时背景色 */
+  @confirm-btn-mousedown-color: #6699ff;
+  /* confirm弹框按钮 */
+  &.btn-confirm {
+    width: 80px;
+    line-height: 20px;
+
+    &:not(:last-child) {
+      margin-right: 8px;
+    }
+
+    &.cancel {
+      color: @confirm-cancel-color;
+      background-color: @confirm-cancel-released-color;
+
+      &:hover {
+        background-color: @confirm-btn-mouseover-color;
+        color: #fff;
+      }
+
+      &:active {
+        background-color: @confirm-btn-mousedown-color;
+        color: #fff;
+      }
+    }
+
+    &:hover {
+      background-color: @confirm-btn-mouseover-color;
+    }
+
+    &:active {
+      background-color: @confirm-btn-mousedown-color;
+    }
+  }
 
   /* 搜索按钮 */
   &.search {
