--- a/src/less/theme.less
+++ b/src/less/theme.less
@@ -10,6 +10,8 @@
 
 /* confirm按钮无鼠标触碰时背景色 */
 @confirm-btn-released-color: #3573e0;
+/* confirm按钮禁止点击时背景色 */
+@confirm-btn-not-color: #99ccff;
 /* confirm 取消 按钮无鼠标触碰时背景色 */
 @confirm-cancel-released-color: #dcedfe;
 /* confirm 取消 按钮文字颜色 */
